--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-yan",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "自定义eslint插件",
   "keywords": [
     "eslint",
@@ -28,5 +28,8 @@
   "devDependencies": {
     "eslint": "^8.57.0",
     "jest": "^30.2.0"
+  },
+  "peerDependencies": {
+    "eslint": ">=8.57.0"
   }
 }
