feat: 检测是否是最新包，然后安装

--- a/packages/frontend-lint/package.json
+++ b/packages/frontend-lint/package.json
@@ -29,6 +29,8 @@
     "url": "https://github.com/frontzhm/frontend-lint/issues"
   },
   "devDependencies": {
-    "commander": "^14.0.2"
+    "commander": "^14.0.2",
+    "consola": "^3.4.2",
+    "ora": "^5.4.1"
   }
 }
