--- a/packages/commitlint-config-yan/package.json
+++ b/packages/commitlint-config-yan/package.json
@@ -24,7 +24,6 @@
     "url": "https://github.com/frontzhm/fe-lint-yan/issues"
   },
   "peerDependencies": {
-    "@commitlint/cli": "^20.1.0",
-    "@commitlint/config-conventional": "^20.0.0"
+    "@commitlint/cli": "^16.3.0"
   }
 }
