--- a/packages/fe-lint-yan/package.json
+++ b/packages/fe-lint-yan/package.json
@@ -43,7 +43,7 @@
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.3",
     "@babel/preset-react": "^7.16.0",
-    "@commitlint/cli": "^16.0.0",
+    "@commitlint/cli": "20.1.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "chalk": "^4.1.0",
@@ -71,7 +71,7 @@
     "inquirer": "^7.3.3",
     "is-docker": "^2.1.1",
     "lodash": "^4.17.20",
-    "markdownlint": "^0.25.1",
+    "markdownlint": "0.39.0",
     "markdownlint-config-yan": "^1.0.1",
     "markdownlint-rule-helpers": "^0.13.0",
     "ora": "^5.1.0",
