--- a/packages/fe-lint-yan/package.json
+++ b/packages/fe-lint-yan/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fe-lint-yan",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "自定义的前端编码规范工程化配套 Lint 工具",
   "bin": "./lib/cli.js",
   "main": "./lib/index.js",
@@ -43,19 +43,19 @@
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.3",
     "@babel/preset-react": "^7.16.0",
-    "@commitlint/cli": "20.1.0",
+    "@commitlint/cli": "^16.3.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "chalk": "^4.1.0",
     "command-exists": "^1.2.9",
     "commander": "^6.2.1",
-    "commitlint-config-yan": "^1.0.3",
+    "commitlint-config-yan": "^1.0.4",
     "cross-spawn": "^7.0.3",
     "ejs": "^3.1.5",
     "eslint": "^8.7.0",
     "eslint-config-egg": "^10.0.0",
-    "eslint-config-yan": "^1.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-yan": "^1.0.1",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -71,8 +71,8 @@
     "inquirer": "^7.3.3",
     "is-docker": "^2.1.1",
     "lodash": "^4.17.20",
-    "markdownlint": "0.39.0",
-    "markdownlint-config-yan": "^1.0.2",
+    "markdownlint": "^0.25.1",
+    "markdownlint-config-yan": "^1.0.3",
     "markdownlint-rule-helpers": "^0.13.0",
     "ora": "^5.1.0",
     "prettier": "^2.2.1",
